# modern-cpp

./: .gitmodules  README.md  goorm.manifest
.github/: copilot-instructions.md
.github/workflows/: build.yml
CPP20/: c++20.bat
CPP20/LAMBDA/: c.out  start.sh
CPP20/__BUILD_BATFILE/: c++20.bat
CPPTHREAD/CPPTHREAD/: CPPTHREAD.sln  CPPTHREAD.vcxproj  CPPTHREAD.vcxproj.filters
CPPTHREAD/CPPTHREAD/SECTION02/: async_ex1.cpp
CPPTHREAD/CPPTHREAD/x64/Debug/: CPPTHREAD.exe.recipe  CPPTHREAD.ilk  CPPTHREAD.vcxproj.FileListAbsolute.txt  vc143.idb
CPPTHREAD/CPPTHREAD/x64/Debug/CPPTHREAD.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CPPTHREAD.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CPPTHREAD/SECTION03/: semaphore2.cpp
ChainOfResponsibility/: cor_broker.cpp
ModernCPP/: .gitignore  BUILD.md  INSTALL.md  Makefile  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  SUMMARY.md
ModernCPP/docs/: concepts_guide.md  coroutine_guide.md  setup_troubleshooting.md
ModernCPP/include/: logger.hpp  message.hpp
ModernCPP/src/examples/: 01_concepts.cpp  02_ranges.cpp  03_coroutine.cpp  04_cpp20_features.cpp  05_smart_pointers.cpp
ProC++/: .gitignore  AirlineTicket.cpp  AirlineTicket.cppm  CMakeLists.txt  Dockerfile  Employee.cpp  Employee.cppm  Employee.hpp  ExampleAllocateArray.cpp  ExampleAllocateArray.hpp  ExampleArray.cpp  ExampleArray2.cpp  ExampleArray339.hpp  ExampleCasting.cpp  ExampleCasting.hpp  ExampleConst.cpp  ExampleConst.hpp  ExampleDesignated.h  ExampleFor.cpp  ExampleInit.cpp  ExampleInit.h  ExampleInitList.cpp  ExampleKeyValue.hpp  ExampleMain.cpp  ExampleOptional.cpp  ExamplePointer.hpp  ExampleReference.cpp  ExampleReference.hpp  ExampleString.cpp  ExampleString.hpp  README.md  page89.cpp
ProC++/AttributePage92/: AttributeExample.cpp  readme.md
ProC++/Code/c08_code/01_SpreadsheetCellNumOnly/: build.sh
ProC++/chap8/: CMakeLists.txt  EvenSequence.cpp  EvenSequence.hpp  FooExample.cpp  FooExample.hpp  Main.cpp  README.md  SpreadsheetCell.cpp  SpreadsheetCell.cppm  SpreadsheetCell.hpp
ProC++/chap8/cppm/: Main.cpp  SpreadsheetCell.cpp  SpreadsheetCell.pcm
ProC++/chap9/: CMakeLists.txt  README.md  SpreadsheetCell.cpp  SpreadsheetCell.hpp
ProC++/cppm/: CMakeLists.txt  README.md
ProC++/page91/: FunctionName.cpp
example/: README.md  attribute.cpp  attribute2.cpp  attribute3.cpp  bind_front.cpp  c.out  callable.cpp  callable1.cpp  callable_function.cpp  cmp_less.cpp  comparison1.cpp  comparison2.cpp  concept1.cpp  concept_advance.cpp  concept_ordering.cpp  construct_at.cpp  contains.cpp  coroutine3.cpp  coroutine4.cpp  coroutine5.cpp  erase_if.cpp  ex_string.cpp  exec.sh  functor.md  lambda.md  lambda1.cpp  lambda2.cpp  lambda3.cpp  make_shared1.cpp  make_shared2.cpp  midpoint.cpp  no_unique_address1.cpp  no_unique_address2.cpp  perfect_forwarding.md  range_concept.cpp  range_intro.cpp  range_intro2.cpp  ref_view1.cpp  ref_view2.cpp  ref_view3.cpp  (+12 more)
modern-cpp/: main.cpp
modern-cpp.xcodeproj/: project.pbxproj
modern-cpp.xcodeproj/xcuserdata/donghun2.xcuserdatad/xcschemes/: xcschememanagement.plist
modoo_code/: README.md  c.out  example4_6.cpp  example4_6_mutable.cpp  exec2.sh  optional.cpp  optional.md  optional2.cpp  overloading.cpp  overloading4.cpp  overloading5.cpp  reference.md  shared_ptr.cpp  shared_ptr_error.cpp  test.cpp  tuple.cpp
modoo_code/xcode/: ex_string.cpp
util/UtilProject/: UtilProject.sln
util/UtilProject/Debug/: UtilProject.ilk
util/UtilProject/UtilProject/: CBitSet.cpp  CBitSet.h  UtilProject.cpp  UtilProject.vcxproj  UtilProject.vcxproj.filters
util/UtilProject/UtilProject/Debug/: vc141.idb
util/UtilProject/UtilProject/Debug/UtilProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  UtilProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
window/: README.md
window/CodeProject/: CodeProject.sln
window/CodeProject/CodeProject/: CodeProject.vcxproj  CodeProject.vcxproj.filters  Compare.hpp  EmployeeModule.ixx  Enum.hpp  LRValue.hpp  Literal.hpp  Modern20.hpp  array.hpp  function.hpp  initialize_list.hpp  loop.hpp  main.cpp  optional.hpp  pair.hpp  reference.hpp  structurebinding.hpp
